--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
-} */
+}
 
 body {
   max-width: 80%;
@@ -12,12 +12,81 @@ html {
   background-image: url("1.jpg");
 }
 
-header {
+/* HEADER MENU START */
+.top-menu {
+  position: relative;
+  background: rgba(34, 34, 34, 0.2);
+}
+.menu-main {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.menu-main:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.left-item {
+  float: left;
+}
+.right-item {
+  float: right;
+}
+.navbar-logo {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.menu-main a {
+  text-decoration: none;
+  display: block;
+  line-height: 80px;
+  padding: 0 20px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-family: "Arimo", sans-serif;
+  font-weight: bold;
   color: coral;
-  font-size: 40px;
+  transition: 0.3s linear;
+}
+.menu-main a:hover {
+  background: rgba(0, 0, 0, 0.3);
+}
+@media (max-width: 830px) {
+  .menu-main {
+    padding-top: 90px;
+    text-align: center;
+  }
+  .navbar-logo {
+    position: absolute;
+    left: 50%;
+    top: 10px;
+    transform: translateX(-50%);
+  }
+  .menu-main li {
+    float: none;
+    display: inline-block;
+  }
+  .menu-main a {
+    line-height: normal;
+    padding: 20px 15px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 630px) {
+  .menu-main li {
+    display: block;
+  }
+}
+/* HEADER MENU END */
+
+.mainText {
+  margin: 0px auto;
+  color: coral;
+  font-size: 60px;
   text-shadow: 20px 15px 20px pink;
-  margin: -70px;
-  padding: -500px;
   align-items: center;
   text-align: center;
 }
