--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@
   max-width: 80%;
 } */
 
+body,
 html {
+  height: 90%;
   font-family: "Emilys Candy", cursive;
   background-image: url("./pictures/1.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  height: 90%;
 }
 
 header {
@@ -53,7 +56,7 @@ header {
   display: block;
   line-height: 80px;
   padding: 0 20px;
-  font-size: 20px;
+  font-size: 24px;
   letter-spacing: 2px;
   font-weight: bold;
   color: coral;
@@ -162,7 +165,8 @@ footer {
 
 .footerElement a {
   text-decoration: none;
-  display: block;
+  display: flex;
+  align-items: center;
   margin: 15px 15px;
   padding: 0 20px;
   font-size: 20px;
